# soundos

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  inject_shared_libs_into_apk.py  justfile  put_libcpp.sh
.cargo/: config.toml
src/: file_cache.rs  main.rs  menu.rs  pods.rs  sound.rs
src/components/: hero.rs
