[package]
name = "sound-os"
version = "0.1.0"
authors = ["Erik Karlsson <karlsson.erik.1@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dioxus = { version = "0.6.0", features = [] }
feed-rs = "2.3.1"
filenamify = "0.1.2"
piper-rs = "0.1.9"
podcast-api = "1.1.6"
reqwest = { version = "0.12.12", features = ["blocking"] }
rodio = "0.20.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
