[package]
name = "sound-os"
version = "0.1.0"
authors = ["Erik Karlsson <karlsson.erik.1@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mutex = "1.4.0"
async-std = "1.13.0"
base64 = "0.22.1"
dioxus = { version = "0.6.0", features = [] }
feed-rs = "2.3.1"
filenamify = "0.1.2"
reqwest = { version = "0.12.12", features = ["json"] }
rodio = "0.20.1"
oboe = { version = "0.6.1", features = [
    "java-interface",
    "jni",
    "ndk",
    "ndk-context",
    "shared-stdcxx",
], optional = true }
cpal = { version = "0.15.3", features = [] }
serde = "1.0.218"
# sherpa-rs = { version = "0.6.5", features = ["tts"] }
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile", "oboe"]
# mobile = ["dioxus/mobile", "oboe"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
